src/objects/Contact_Leg_junction__c.object
<CustomObject>
    <description>Relates Contacts to Legislation object with many to many relationship</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislation related to this Contact</relationshipLabel>
        <relationshipName>Contact_Leg_junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legislation__c</fullName>
        <label>Legislation</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Contacts related to this Legislation</relationshipLabel>
        <relationshipName>Contact_Leg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Key Ally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supportive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-sponsor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Related to Legislation</label>
    <nameField>
        <displayFormat>ContLeg-{0000}</displayFormat>
        <label>Contact-Leg ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Related to Legislation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>